# AGENTIC-AI-SQL-QUERY-GENERATOR

./: .env  PROJECT_DOCUMENTATION.md  RESUME_BEFORE_AFTER.md  RESUME_CONTENT.md  RESUME_COPY_PASTE_READY.md  SCHEMA_VALIDATION_FIX.md  app.py  database.py  mysql_rules.md  presentation.md  pyproject.toml  queries.txt  query_generator.py  readme.txt  requirements.txt  test_refinement.py  test_schema_validation.py  ui.py  workflow_diagram.md
